@@ -151,6 +151,7 @@ ip4_route_src(const ip4_addr_t *dest, const ip4_addr_t *src)
 struct netif *
 ip4_route(const ip4_addr_t *dest)
 {
+#if !LWIP_SINGLE_NETIF
   struct netif *netif;
 
 #if LWIP_MULTICAST_TX_OPTIONS
@@ -205,6 +206,7 @@ ip4_route(const ip4_addr_t *dest)
     return netif;
   }
 #endif
+#endif /* !LWIP_SINGLE_NETIF */
 
   if ((netif_default == NULL) || !netif_is_up(netif_default) || !netif_is_link_up(netif_default) ||
       ip4_addr_isany_val(*netif_ip4_addr(netif_default))) {
@@ -534,7 +536,8 @@ ip4_input(struct pbuf *p, struct netif *inp)
       if (!ip4_addr_isloopback(ip4_current_dest_addr()))
 #endif /* !LWIP_NETIF_LOOPBACK || LWIP_HAVE_LOOPIF */
       {
-        for (netif = netif_list; netif != NULL; netif = netif->next) {
+#if ! LWIP_SINGLE_NETIF
+        NETIF_FOREACH(netif) {
           if (netif == inp) {
             /* we checked that before already */
             continue;
@@ -543,6 +546,7 @@ ip4_input(struct pbuf *p, struct netif *inp)
             break;
           }
         }
+#endif /* !LWIP_SINGLE_NETIF */
       }
     }
   }
