@@ -6,6 +6,9 @@ HISTORY
 
   ++ New features:
 
+  2017-02-28: Simon Goldschmidt
+  * Added LWIP_SINGLE_NETIF for small targets with only one netif
+
   2017-02-17: Simon Goldschmidt
   * Improved DNS_LOCAL_HOSTLIST interface
 
